# where_to_live

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: .env.example  __init__.py  main.py  maps_services.py  models.py
app/crud/: locations.py  storage.py
app/main/: routes.py
app/models/: location.py
app/routers/: filters.py  locations.py
app/templates/: admin.html  map.html
gcp-setup/: setup_gcp.sh
scripts/: setup_gcs.sh  setup_secrets.sh
src/where_to_live/: __init__.py
